--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             </li>
           </ul>
         </nav>      
-       <div class="connect">
-          <ul class="connect__site list">
+       <div class="connect header__connect">
+          <ul class="connect__list list">
             <li class="connect__item">
               <a class="connect__mail link" href="mailto:info@devstudio.com">
                 <svg class="connect__icon" width="16" height="12">
@@ -70,34 +70,34 @@
         </div>
       </section>
 
-      <section class="hidden section">
-        <div class="container">
+      <section class="benefits section">
+        <div class="container benefits__container">
           <h2 class="visually-hidden">Наші переваги</h2>
-          <ul class="hidden-list list">
-            <li class="hidden-item icon-antenna">
+          <ul class="cart-list list">
+            <li class="cart-list__item icon__antenna">
               <h3 class="caption">Увага до деталей</h3>
-              <p class="content">
+              <p class="cart-list__content">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
-            <li class="hidden-item icon-clock">
+            <li class="cart-list__item icon__clock">
               <h3 class="caption">Пунктуальність</h3>
-              <p class="content">
+              <p class="cart-list__content">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе.
               </p>
             </li>
 
-            <li class="hidden-item icon-diagram">
+            <li class="cart-list__item icon__diagram">
               <h3 class="caption">Планування</h3>
-              <p class="content">
+              <p class="cart-list__content">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li class="hidden-item icon-astronaut">
+            <li class="cart-list__item icon__astronaut">
               <h3 class="caption">Сучасні технології</h3>
-              <p class="content">
+              <p class="cart-list__content">
                 Значимість цих проблем настільки очевидна, що реалізація
                 планових завдань.
               </p>
@@ -107,83 +107,83 @@
       </section>
       <!--Чим займаються-->
       <section class="about section">
-        <div class="container">
+        <div class="container about__container">
           <h2 class="subtitle">Чим ми займаємося</h2>
-          <ul class="about-list list">
-            <li class="about-item">
+          <ul class="picture-list list">
+            <li class="picture-list__item">
               <img src="./images/box1.jpg" alt="Рзробка" width="370" >
-              <p class="after-about-title">Десктопні додатки</p>
+              <p class="picture-list__title">Десктопні додатки</p>
             </li>
-            <li class="about-item">
+            <li class="picture-list__item">
               <img src="./images/img1.jpg" alt="Дизайн" width="370" >
-              <p class="after-about-title">Мобільні додатки</p>
+              <p class="picture-list__title">Мобільні додатки</p>
             </li>
-            <li class="about-item">
+            <li class="picture-list__item">
               <img src="./images/img2.jpg" alt="Тестування" width="370" >
-              <p class="after-about-title">Дизайнерські рішення</p>
+              <p class="picture-list__title">Дизайнерські рішення</p>
             </li>
           </ul>
         </div>
       </section>
       <!--Команда-->
-      <section class="team section">
-        <div class="container">
+      <section class="people section">
+        <div class="container people__container">
           <h2 class="subtitle">Наша команда</h2>
-          <ul class="section-list list">
-            <li class="picture">
+          <ul class="people__list list">
+            <li class="people__item">
               <img src="./images/img4.jpg" alt="Ігор Дем'яненко" width="270" >
-              <div class="name-special">
-                <h3 class="name">Ігор Дем'яненко</h3>
-                <p class="specialist">Product Designer</p>
-                <ul class="specialist-soc-list list">
-                  <li class="specialist-soc-item">
+              <div class="people__name">
+                <h3 class="people__title">Ігор Дем'яненко</h3>
+                <p class="people__text">Product Designer</p>
+                <ul class="soc list">
+                  <li class="soc__item">
                     <a
                       href=""
-                      class="specialist-soc-link link"
+                      class="soc__link link"
                       target="_blank"
                       rel="noopener noreferrer nofolbow"
                     >
-                      <svg class="specialist-soc-icon" width="20" height="20">
+                      <svg class="soc__icon" width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-instagram"
                         ></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="specialist-soc-item">
+                  <li class="soc__item">
                     <a
                       href=""
-                      class="specialist-soc-link link"
+                      class="soc__link link"
                       target="_blank"
                       rel="noopener noreferrer nofolbow"
                     >
-                      <svg class="specialist-soc-icon" width="20" height="20">
+                      <svg class="soc__icon" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="specialist-soc-item">
+                  <li class="soc__item">
                     <a
                       href=""
-                      class="specialist-soc-link link"
+                      class="soc__link link"
                       target="_blank"
                       rel="noopener noreferrer nofolbow"
                     >
-                      <svg class="specialist-soc-icon" width="20" height="20">
+                      <svg class="soc__icon" width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-facebook"
                         ></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="specialist-soc-item">
+                  <li class="soc__item">
                     <a
                       href=""
-                      class="specialist-soc-link link"
+                      class="soc__link link"
                       target="_blank"
                       rel="noopener noreferrer nofolbow"
                     >
-                      <svg class="specialist-soc-icon" width="20" height="20">
+                      <svg class="soc__icon" width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-linkedin"
                         ></use>
@@ -193,59 +193,59 @@
                 </ul>
               </div>
             </li>
-            <li class="picture">
+            <li class="people__item">
               <img src="./images/img3.jpg" alt="Ольга Рєпіна" width="270" >
-              <div class="name-special">
-                <h3 class="name">Ольга Рєпіна</h3>
-                <p class="specialist">Frontend Developer</p>
-                <ul class="specialist-soc-list list">
-                  <li class="specialist-soc-item">
+              <div class="people__name">
+                <h3 class="people__title">Ольга Рєпіна</h3>
+                <p class="people__text">Frontend Developer</p>
+                <ul class="soc list">
+                  <li class="soc__item">
                     <a
                       href=""
-                      class="specialist-soc-link link"
+                      class="soc__link link"
                       target="_blank"
                       rel="noopener noreferrer nofolbow"
                     >
-                      <svg class="specialist-soc-icon" width="20" height="20">
+                      <svg class="soc__icon" width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-instagram"
                         ></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="specialist-soc-item">
+                  <li class="soc__item">
                     <a
                       href=""
-                      class="specialist-soc-link link"
+                      class="soc__link link"
                       target="_blank"
                       rel="noopener noreferrer nofolbow"
-                      ><svg class="specialist-soc-icon" width="20" height="20">
+                      ><svg class="soc__icon" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="specialist-soc-item">
+                  <li class="soc__item">
                     <a
                       href=""
-                      class="specialist-soc-link link"
+                      class="soc__link link"
                       target="_blank"
                       rel="noopener noreferrer nofolbow"
                     >
-                      <svg class="specialist-soc-icon" width="20" height="20">
+                      <svg class="soc__icon" width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-facebook"
                         ></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="specialist-soc-item">
+                  <li class="soc__item">
                     <a
                       href=""
-                      class="specialist-soc-link link"
+                      class="soc__link link"
                       target="_blank"
                       rel="noopener noreferrer nofolbow"
                     >
-                      <svg class="specialist-soc-icon" width="20" height="20">
+                      <svg class="soc__icon" width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-linkedin"
                         ></use>
@@ -255,59 +255,59 @@
                 </ul>
               </div>
             </li>
-            <li class="picture">
+            <li class="people__item">
               <img src="./images/img6.jpg" alt="Микола Тарасов" width="270" >
-              <div class="name-special">
-                <h3 class="name">Микола Тарасов</h3>
-                <p class="specialist">Marketing</p>
-                <ul class="specialist-soc-list list">
-                  <li class="specialist-soc-item">
+              <div class="people__name">
+                <h3 class="people__title">Микола Тарасов</h3>
+                <p class="people__text">Marketing</p>
+                <ul class="soc list">
+                  <li class="soc__item">
                     <a
                       href=""
-                      class="specialist-soc-link link"
+                      class="soc__link link"
                       target="_blank"
                       rel="noopener noreferrer nofolbow"
                     >
-                      <svg class="specialist-soc-icon" width="20" height="20">
+                      <svg class="soc__icon" width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-instagram"
                         ></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="specialist-soc-item">
+                  <li class="soc__item">
                     <a
                       href=""
-                      class="specialist-soc-link link"
+                      class="soc__link link"
                       target="_blank"
                       rel="noopener noreferrer nofolbow"
-                      ><svg class="specialist-soc-icon" width="20" height="20">
+                      ><svg class="soc__icon" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="specialist-soc-item">
+                  <li class="soc__item">
                     <a
                       href=""
-                      class="specialist-soc-link link"
+                      class="soc__link link"
                       target="_blank"
                       rel="noopener noreferrer nofolbow"
                     >
-                      <svg class="specialist-soc-icon" width="20" height="20">
+                      <svg class="soc__icon" width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-facebook"
                         ></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="specialist-soc-item">
+                  <li class="soc__item">
                     <a
                       href=""
-                      class="specialist-soc-link link"
+                      class="soc__link link"
                       target="_blank"
                       rel="noopener noreferrer nofolbow"
                     >
-                      <svg class="specialist-soc-icon" width="20" height="20">
+                      <svg class="soc__icon" width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-linkedin"
                         ></use>
@@ -317,59 +317,59 @@
                 </ul>
               </div>
             </li>
-            <li class="picture">
+            <li class="people__item">
               <img src="./images/img5.jpg" alt="Михайло Єрмаков" width="270" >
-              <div class="name-special">
-                <h3 class="name">Михайло Єрмаков</h3>
-                <p class="specialist">UI Designer</p>
-                <ul class="specialist-soc-list list">
-                  <li class="specialist-soc-item">
+              <div class="people__name">
+                <h3 class="people__title">Михайло Єрмаков</h3>
+                <p class="people__text">UI Designer</p>
+                <ul class="soc list">
+                  <li class="soc__item">
                     <a
                       href=""
-                      class="specialist-soc-link link"
+                      class="soc__link link"
                       target="_blank"
                       rel="noopener noreferrer nofolbow"
                     >
-                      <svg class="specialist-soc-icon" width="20" height="20">
+                      <svg class="soc__icon" width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-instagram"
                         ></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="specialist-soc-item">
+                  <li class="soc__item">
                     <a
                       href=""
-                      class="specialist-soc-link link"
+                      class="soc__link link"
                       target="_blank"
                       rel="noopener noreferrer nofolbow"
-                      ><svg class="specialist-soc-icon" width="20" height="20">
+                      ><svg class="soc__icon" width="20" height="20">
                         <use href="./images/symbol-defs.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="specialist-soc-item">
+                  <li class="soc__item">
                     <a
                       href=""
-                      class="specialist-soc-link link"
+                      class="soc__link link"
                       target="_blank"
                       rel="noopener noreferrer nofolbow"
                     >
-                      <svg class="specialist-soc-icon" width="20" height="20">
+                      <svg class="soc__icon" width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-facebook"
                         ></use>
                       </svg>
                     </a>
                   </li>
-                  <li class="specialist-soc-item">
+                  <li class="soc__item">
                     <a
                       href=""
-                      class="specialist-soc-link link"
+                      class="soc__link link"
                       target="_blank"
                       rel="noopener noreferrer nofolbow"
                     >
-                      <svg class="specialist-soc-icon" width="20" height="20">
+                      <svg class="soc__icon" width="20" height="20">
                         <use
                           href="./images/symbol-defs.svg#icon-linkedin"
                         ></use>
