--- a/portfolio.html
+++ b/portfolio.html
@@ -23,46 +23,44 @@
   </head>
   <body>
     <header class="header">
-      <div class="container header-container">
-        <nav class="nav">
+      <div class="container header__container">
+        <nav class="navigation">
           <a class="logo link" href="./index.html"
-            >Web<span class="logo-to">Studio</span></a
-          >
-          <ul class="site-nav list">
-            <li class="nav-list-item">
-              <a class="nav-link link" href="./index.html">Студія</a>
+            >Web<span class="logo__to">Studio</span>
+          </a>
+          <ul class="menu list">
+            <li class="menu__item">
+              <a class="menu__link link current" href="./index.html">Студія</a>
             </li>
-            <li class="nav-list-item">
-              <a class="nav-link link current" href="./portfolio.html"
-                >Портфоліо</a
-              >
+            <li class="menu__item">
+              <a class="menu__link link" href="./portfolio.html">Портфоліо</a>
             </li>
-            <li class="nav-list-item">
-              <a class="nav-link link" href="#">Контакти</a>
+            <li class="menu__item">
+              <a class="menu__link link" href="#">Контакти</a>
             </li>
           </ul>
-        </nav>
-        <div class="header-address">
-          <ul class="site-contact list">
-            <li class="nav-item">
-              <a class="nav-mail link" href="mailto:info@devstudio.com">
-                <svg class="nav-mail-icon" width="16" height="12">
+        </nav>      
+       <div class="connect header__connect">
+          <ul class="connect__list list">
+            <li class="connect__item">
+              <a class="connect__mail link" href="mailto:info@devstudio.com">
+                <svg class="connect__icon" width="16" height="12">
                   <use href="./images/symbol-defs.svg#icon-envelope"></use>
                 </svg>
                 info@devstudio.com
               </a>
             </li>
-            <li class="nav-item">
-              <a class="nav-tel link" href="tel:+380961111111">
-                <svg class="nav-tel-icon" width="10" height="16">
+            <li class="connect__item">
+              <a class="connect__tel link" href="tel:+380961111111">
+                <svg class="connect__icon" width="10" height="16">
                   <use href="./images/symbol-defs.svg#icon-smartphone"></use>
                 </svg>
                 +38 096 111 11 11
               </a>
             </li>
           </ul>
-        </div>
       </div>
+    </div>
     </header>
     <main>
       <section class="portfolio section">
